# chat-applicaiton

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
models/: schemas.py
routers/: chat.py
services/: ai_service.py
static/: script.js  style.css
templates/: index.html
