[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]
